# vaalijarjestelma

./: .gitignore  LICENSE  README.md  käsinlaskenta.txt  main.py  mypy.ini  pikkuvaali.txt  pyproject.toml  requirements.txt
aantenlaskenta/: ehdokas.py  laske_summat.py  lipuke.py  main.py  opavote.py  pudotus.py  utils.py  vaali.py  vaalilogger.py
src/: main.py
testivaaleja/: .~lock.pikkuvaali.csv#  hallitusvaali.txt  hylättyjä_ääniä.txt  pikkuvaali.csv  pikkuvaali.txt  testi.txt  testi.txt    testivaali2.txt  testivaali3.txt  virkailijavaali1.txt  virkailijavaali2.txt  virkailijavaali3.txt
tests/: context.py  test_foo.py  test_koko_vaali.py  test_laske_summat.py  test_main.py  test_opavote.py  test_pudotus.py  test_utils.py  test_vaali.py
ääntenlaskenta/: main.py
