[tool.poetry]
name = "ääntenlaskenta2024"
version = "0.1.0"
description = "Ääntenlaskentaohjelma TKO-äly ry:n yhdistyksen kokouksiin."
authors = ["Alexandra Holvi <alexandra.holvi@gmail.com>"]
readme = "README.md"
packages = [
  { include = "ääntenlaskenta" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "aantenlaskenta"
]
