[tool.poetry]
name = "ääntenlaskenta2024"
version = "0.1.0"
description = "Ääntenlaskentaohjelma TKO-äly ry:n yhdistyksen kokouksiin."
authors = ["Alexandra Holvi", "Sanna Hanén"]
readme = "README.md"
packages = [
  { include = "aantenlaskenta" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "aantenlaskenta"
]
